<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Airhorn Simulator 2015</string>
    <string name="action_settings">Settings</string>
    <string name="description_sound_icon">Icon for sound</string>
    <string name="sound_name">Sound Name</string>
    <string name="sound_songs">Songs</string>
    <string name="title_activity_songs">Songs</string>
    <string name="song_name">Song Name</string>
    <string name="action_stop">Stop</string>
    <string name="action_search">Search</string>
    <string name="title_main_activity">Sounds</string>

</resources>
